--- a/client/src/pages/Detail/Detail.css
+++ b/client/src/pages/Detail/Detail.css
@@ -6,3 +6,88 @@
 	display: block;
 	margin-top: 0.5rem;
 }
+
+/* sunny adds stuff */
+
+#cl-banner {
+    padding: 5rem 0;
+    position: relative;
+}
+
+.cl-bannerimg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(https://images.unsplash.com/photo-1515539408953-9403f070ad2e?ixlib=rb-0.3.5Ã¢â‚¬Â¦EyMDd9&s=df0649bÃ¢â‚¬Â¦&auto=format&fit=crop&w=2550&q=80);
+    background-size: cover;
+    background-position: bottom;
+    filter: contrast(70%) grayscale(0%);
+}
+
+.cl-banneroverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #23223e7a;
+}
+
+.cl-facilitybannerimg {
+    background: url(https://images.unsplash.com/photo-1453614512568-c4024d13c247?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=01be54aef2c30ab337248a5bc1439602&auto=format&fit=crop&w=2689&q=80);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: bottom;
+}
+
+.cl-facilitybanner {
+    position: relative;
+    min-height: 340px;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.cl-detailsholder {
+    margin-top: -7rem;
+    padding: 0 2.75rem;
+}
+
+.cl-facilityrating {
+    padding: 2.5rem;
+    min-height: 340px;
+    background: #fff;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.cl-boxshadow {
+    -webkit-box-shadow: 0 2px 8px rgba(153,153,153,.4);
+    box-shadow: 0 2px 8px rgba(125, 125, 125, 0.17);
+}
+
+.cl-risksholder {
+    padding: 2.5rem 2.75rem 0;
+}
+
+.cl-ulrl {
+    margin-top: 2rem;
+}
+
+.cl-ulrl li {
+    border-bottom: 1px solid #dbdbdb;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.75rem;
+}
+
+.cl-stickers {
+    float: left;
+    font-size: 62%;
+    margin-right: 8px;
+    text-transform: uppercase;
+}
