new styled components now populated with data

--- a/client/src/pages/Detail/Detail.css
+++ b/client/src/pages/Detail/Detail.css
@@ -14,6 +14,11 @@
     position: relative;
 }
 
+.cl-bannertext {
+    font-size: 2.3rem !important;
+    margin-bottom: 1.5rem;
+}
+
 .cl-bannerimg {
     position: absolute;
     top: 0;
