--- a/client/src/pages/Detail/Detail.css
+++ b/client/src/pages/Detail/Detail.css
@@ -9,35 +9,14 @@
 
 /* sunny adds stuff */
 
-#cl-banner {
+#cl-detailsbanner {
     padding: 5rem 0;
     position: relative;
 }
 
-.cl-bannertext {
+#cl-detailsbannertext {
     font-size: 2.3rem !important;
     margin-bottom: 1.5rem;
-}
-
-.cl-bannerimg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(https://images.unsplash.com/photo-1515539408953-9403f070ad2e?ixlib=rb-0.3.5Ã¢â‚¬Â¦EyMDd9&s=df0649bÃ¢â‚¬Â¦&auto=format&fit=crop&w=2550&q=80);
-    background-size: cover;
-    background-position: bottom;
-    filter: contrast(70%) grayscale(0%);
-}
-
-.cl-banneroverlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #23223e7a;
 }
 
 .cl-facilitybannerimg {
