--- a/client/src/pages/Results/Results.css
+++ b/client/src/pages/Results/Results.css
@@ -1,3 +1,13 @@
+#cl-resultsbanner {
+    padding: 3.5rem 0;
+    position: relative;
+}
+
+#cl-resultsbannertext {
+    font-size: 2.3rem !important;
+    margin-bottom: 1.5rem;
+}
+
 .result-card {
 	margin-bottom: 1.5rem;
 }
@@ -5,4 +15,15 @@
 .result-rating {
 	display: block;
 	margin-top: 0.5rem;
+}
+
+#cl-srtitle {
+	margin-bottom: 1.5rem;
+}
+
+.cl-emoji {
+    font-size: 140%;
+    margin-top: -4px;
+    margin-right: 7px;
+    float: left;
 }
