--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -26,3 +26,13 @@
 .cl-searchcontainer .button.is-danger {
 	background: #01cecd !important;
 }
+
+#cl-searchform .select:not(.is-multiple):not(.is-loading)::after {
+    border-color: #697c98;
+    right: 1.125em;
+    z-index: 4;
+}
+
+#cl-navsearch > svg {
+	margin-left: 15px;
+}
