still styling details page, added console log to controller to debug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,13 @@ body {
 .cl-bannertext {
     font-size: 2.3rem !important;
 }
+
+.extrapadding {
+    padding: 0 2.75rem;
+}
+
+.extraborder {
+    margin: 0 0 2rem !important;
+    padding-bottom: 1.25rem !important;
+    border-bottom: 1px solid #dbdbdb !important;
+}
