--- a/client/src/components/Details/Details.css
+++ b/client/src/components/Details/Details.css
@@ -2,12 +2,12 @@
 
 .donutchart-track{
   fill: transparent;
-  stroke: #DAE2E5;
+  stroke: #dbdbdb;
   stroke-width: 26;
 }
 .donutchart-indicator {
   fill: transparent;
-  stroke: #009688;
+  stroke: #01cfcd;
   stroke-width: 26;
   stroke-dasharray: 0 10000;
   transition: stroke-dasharray .3s ease;
@@ -20,7 +20,7 @@
 } 
   
 .donutchart-text{
-  fill: #607580;
+  fill: #716f82;
 }
 
 .donutchart-text-val{
