--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -14,3 +14,18 @@
 .result-card .donutchart-text-label{
   font-size:9px;
 }
+
+.result-card .cl-cardlocation {
+    color: #6e6b7d !important;
+}
+
+.result-card .cl-cardlocation > svg {
+    position: relative;
+    top: -2px;
+    margin-right: 2px;
+    color: #01cfcd;
+}
+
+.result-card .cl-cardcontentinner {
+	margin-top: 1.45rem;
+}
